@@ -3,5 +3,3 @@
 # 
 #
 
-* update documentation
-* add news
